--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -1,38 +1,38 @@
 {
-  "sunSeeker.description": "收获向日葵 100 次",
-  "cabbageKing.description": "收获卷心菜 200 次",
-  "jackOLantern.description": "收获南瓜 500 次",
-  "coolFlower.description": "收获花椰菜 100 次",
-  "farmHand.description": "收获庄稼 10,000 次",
-  "beetrootBeast.description": "收获甜菜根 2,000 次",
-  "myLifeIsPotato.description": "收获土豆 5,000 次",
-  "rapidRadish.description": "收获小萝卜 200 次",
-  "twentyTwentyVision.description": "收获胡萝卜 10,000 次",
-  "stapleCrop.description": "收获小麦 10,000 次",
-  "sunflowerSuperstar.description": "收获向日葵 100,000 次",
-  "patientParsnips.description": "收获防风草 5,000 次",
-  "cropChampion.description": "收获 1 百万庄稼",
+  "sunSeeker.description": "收获<向日葵> 100 次",
+  "cabbageKing.description": "收获<卷心菜> 200 次",
+  "jackOLantern.description": "收获<南瓜> 500 次",
+  "coolFlower.description": "收获<花椰菜> 100 次",
+  "farmHand.description": "收获<庄稼> 10,000 次",
+  "beetrootBeast.description": "收获<甜菜根> 2,000 次",
+  "myLifeIsPotato.description": "收获<土豆> 5,000 次",
+  "rapidRadish.description": "收获<小萝卜> 200 次",
+  "twentyTwentyVision.description": "收获<胡萝卜> 10,000 次",
+  "stapleCrop.description": "收获<小麦> 10,000 次",
+  "sunflowerSuperstar.description": "收获<向日葵> 100,000 次",
+  "patientParsnips.description": "收获<防风草> 5,000 次",
+  "cropChampion.description": "收获 1 百万<庄稼>",
   "busyBumpkin.description": "到达 2 级",
-  "busyBumpkin.one": "哈喽喂，我志向远大的朋友！想要解锁新庄稼、地块、建筑诸如此类，你就得去升级。",
-  "busyBumpkin.two": "去瞧瞧 Fire Pit，挑点好吃的菜谱煮给你那乡包佬吃。",
-  "kissTheCook.description": "烹饪 20 顿饭菜",
-  "bakersDozen.description": "烹饪 13 个蛋糕",
+  "busyBumpkin.one": "哈喽喂，我志向远大的朋友！想要解锁新<庄稼>、<地块>、<建筑>诸如此类，你就得去升级。",
+  "busyBumpkin.two": "去瞧瞧<篝火>，挑点好吃的<菜谱>煮给你那乡包佬吃。",
+  "kissTheCook.description": "烹饪 20 顿<饭菜>",
+  "bakersDozen.description": "烹饪 13 个<蛋糕>",
   "brilliantBumpkin.description": "达到 20 级",
-  "chefDeCuisine.description": "烹饪 5,000 顿饭菜",
-  "scarecrowMaestro.description": "锻造一个稻草人来增产你的庄稼。",
+  "chefDeCuisine.description": "烹饪 5,000 顿<饭菜>",
+  "scarecrowMaestro.description": "锻造一个<稻草人>来增产你的<庄稼>。",
   "scarecrowMaestro.one": "哈喽喂，伙计！是时候让你学学锻造的技艺好增强你的农务水准了。",
-  "scarecrowMaestro.two": "跑去南瓜广场，找 Blacksmith 去锻造一个稻草人吧。",
+  "scarecrowMaestro.two": "跑去<南瓜广场>，找 <Blacksmith> 去锻造一个<稻草人>吧。",
   "museum.description": "放有 10 个不同种类的稀有物品在你农场上",
-  "timbeerrr.description": "砍伐 150 棵树木",
-  "craftmanship.description": "锻造 100 个工具",
-  "driller.description": "挖取 50 个石脉",
-  "ironEyes.description": "挖取 50 个铁脉",
-  "elDorado.description": "挖取 50 个金脉",
+  "timbeerrr.description": "砍伐 150 棵<树木>",
+  "craftmanship.description": "锻造 100 个<工具>",
+  "driller.description": "挖取 50 个<石脉>",
+  "ironEyes.description": "挖取 50 个<铁脉>",
+  "elDorado.description": "挖取 50 个<金脉>",
   "timeToChop.description": "锻造 500 把斧头",
-  "canary.description": "挖取 1,000 个石脉",
-  "somethingShiny.description": "挖取 500 个铁脉",
+  "canary.description": "挖取 1,000 个<石脉>",
+  "somethingShiny.description": "挖取 500 个<铁脉>",
   "bumpkinChainsawAmateur.description": "砍伐 5,000 棵树木",
-  "goldFever.description": "挖取 500 个金脉",
+  "goldFever.description": "挖取 500 个<金脉>",
   "explorer.one": "让咱们把这些个树都砍了，采点木头好拓张这岛吧。上手看看咋样最顺手吧。",
   "expansion.description": "拓张你的岛屿到新的境地。",
   "wellOfProsperity.description": "造一口水井",
@@ -129,7 +129,7 @@
   "description.Karkinos": "咔叽诺斯。掐得也温柔，卷心好帮手！",
   "description.tin.turtle": "Tin Turtle 会为你在其作用范围内开采的石头带来 +0.1 增益",
   "description.emerald.turtle": "Emerald Turtle 会为你在其作用范围内开采的任何基矿带来 +0.5 增益",
-  "description.iron.idol": "每次开采铁脉，都会额外赐你 1 块铁矿",
+  "description.iron.idol": "每次开采<铁脉>，都会额外赐你 1 块铁矿",
   "description.crim.peckster": "一位精通揪出猩红宝石的宝石侦探",
   "description.skill.shrimpy": "Shrimpy 来帮忙了！他来保你从鱼身上获取额外 XP",
   "description.soil.krabby": "微笑面对挑拣！有这位坚壳硬汉超人相伴，享受更快 10% 的堆肥时间",
@@ -393,9 +393,9 @@
   "description.tough.tree": "有几率掉落 3 倍木头",
   "description.money.tree": "砍伐树木有几率掉落金币",
   "description.digger": "石头产量增加 10%",
-  "description.coal.face": "石脉恢复速度加快 20%",
+  "description.coal.face": "<石脉>恢复速度加快 20%",
   "description.seeker": "攻击石怪",
-  "description.gold.rush": "开采金脉有几率获得 2.5 倍产量",
+  "description.gold.rush": "开采<金脉>有几率获得 2.5 倍产量",
   "description.rush.hour": "烹饪速度加快 10%",
   "description.kitchen.hand": "饭菜 XP 增加 5%",
   "description.curer": "Deli 餐品 XP 增加 15%",
@@ -1674,9 +1674,9 @@
   "restrictionReason.advancedCropsGrowing": "高阶庄稼正在生长",
   "restrictionReason.fruitsGrowing": "水果正在生长",
   "restrictionReason.treesChopped": "树木已被砍伐",
-  "restrictionReason.stoneMined": "石脉已被开采",
-  "restrictionReason.ironMined": "铁脉已被开采",
-  "restrictionReason.goldMined": "金脉已被开采",
+  "restrictionReason.stoneMined": "<石脉>已被开采",
+  "restrictionReason.ironMined": "<铁脉>已被开采",
+  "restrictionReason.goldMined": "<金脉>已被开采",
   "restrictionReason.crimstoneMined": "猩红宝石已被开采",
   "restrictionReason.chickensFed": "鸡已被喂食",
   "restrictionReason.treasuresDug": "已有挖宝地被挖掘",
@@ -1775,9 +1775,9 @@
   "time.hours.ago": "{{time}} {{hourORhours}} 前",
   "time.days.ago": "{{time}} {{dayORdays}} 前",
   "description.axe": "用来砍树木",
-  "description.pickaxe": "用来开采石脉",
-  "description.stone.pickaxe": "用来开采铁脉",
-  "description.iron.pickaxe": "用来开采金脉",
+  "description.pickaxe": "用来开采<石脉>",
+  "description.stone.pickaxe": "用来开采<铁脉>",
+  "description.iron.pickaxe": "用来开采<金脉>",
   "description.rod": "用来钓鱼",
   "description.rusty.shovel": "用来拆除建筑物和收藏品",
   "description.shovel": "用来种植和收获庄稼",
@@ -2017,7 +2017,7 @@
   "description.arcade.coin": "从小游戏与冒险中赚得的代币。可用于兑换奖赏。",
   "description.farmhand.coupon": "挑选兑换雇农的票券。",
   "description.farmhand": "你农场上雇养的乡包佬",
-  "description.tulip.bulb": "（往期）春暖花开时季使用的票券。",
+  "description.tulip.bulb": "（往期）<春暖花开>章节期间使用的章节票券。",
   "description.prizeTicket": "抽奖奖券。您可以用它投注参与每月 Goblin 抽奖。",
   "description.baozi": "农历新年活动送的美味小吃。",
   "gameOptions.developerOptions.timeMachine": "时光机器",
@@ -4027,10 +4027,10 @@
   "skill.greenhouseGuru": "能够使当前生长的所有温室农产品随时可供收割",
   "skill.rockAndRoll": "+0.1 石头产量",
   "skill.ironBumpkin": "+0.1 铁矿产量",
-  "skill.speedMiner": "-20% 石脉恢复时间",
+  "skill.speedMiner": "-20% <石脉>恢复时间",
   "skill.tapProspector": "小型矿脉开采只需单击 1 下",
   "skill.forgeWardProfits": "+20% 铁匠送货收入",
-  "skill.ironHustle": "-30% 铁脉恢复时间",
+  "skill.ironHustle": "-30% <铁脉>恢复时间",
   "skill.rockyFavor.buff": "+1 石头产量",
   "skill.rockyFavor.debuff": "-0.5 铁矿产量",
   "skill.ferrousFavor.buff": "+1 铁矿产量",
@@ -4321,8 +4321,8 @@
   "skill.horrorMike": "将 Scary Mike 的效果区域 (AOE) 增加到 7x7 区域；中阶庄稼产量增加 +0.1",
   "skill.lauriesGains": "将 Chuckle Crow Laurie 的效果区域 (AOE) 增加到 7x7 区域；额外增加 +0.1 高阶庄稼产量",
   "skill.fishyFortune": "+100% 来自 Corale 送货的金币",
-  "skill.midasSprint": "-10% 金脉恢复时间",
-  "skill.midasRush": "-20% 金脉恢复时间",
+  "skill.midasSprint": "-10% <金脉>恢复时间",
+  "skill.midasRush": "-20% <金脉>恢复时间",
   "doubleDelivery.specialEvent": "特别活动-双酬送货",
   "doubleDelivery.one": "今天是一个特别的日子！送货值得双重奖励。",
   "doubleDelivery.two": "只有每个 bumpkin 或 goblin 当天首次送货的商品才能获得双倍奖励。",
@@ -4605,12 +4605,12 @@
   "weatherItems": "天气物品",
   "birdieplaza.currentSeason": "我们目前处于 {{currentSeason}} 章节，而 Bumpkins 正为 {{seasonalTicket}} s 而疯狂。",
   "description.catch.the.kraken.banner": "Kraken 在这里！捕捉海怪章节参与者的印记。",
-  "description.solar.flare.ticket": "（往期）在《日光闪耀》章节期间使用的章节票券",
-  "description.dawn.breaker.ticket": "（往期）在《拂晓来使》章节期间使用的章节票券",
-  "description.crow.feather": "（往期）在《女巫之夜》章节期间使用的章节票券",
-  "description.mermaid.scale": "（往期）在《海怪围猎》章节期间使用的章节票券",
-  "description.scroll": "（往期）在《帮派冲突》章节期间使用的章节票券",
-  "description.amberFossil": "（往期）在《法老秘宝》章节期间使用的章节票券",
+  "description.solar.flare.ticket": "（往期）在<日光闪耀>章节期间使用的章节票券",
+  "description.dawn.breaker.ticket": "（往期）在<拂晓来使>章节期间使用的章节票券",
+  "description.crow.feather": "（往期）在<女巫之夜>章节期间使用的章节票券",
+  "description.mermaid.scale": "（往期）在<海怪围猎>章节期间使用的章节票券",
+  "description.scroll": "（往期）在<帮派冲突>章节期间使用的章节票券",
+  "description.amberFossil": "（往期）在<法老秘宝>章节期间使用的章节票券",
   "orderhelp.New.Season": "新的篇章即将到来，章节票券送货将暂时关闭。",
   "season.free.season.passes": "免费章节旗帜",
   "season.free.season.passes.description": "获得每个章节的旗帜",
@@ -4759,27 +4759,27 @@
   "chore.chop.tree.450": "砍伐 450 棵树",
   "chore.chop.tree.500": "砍伐 500 棵树",
   "chore.chop.tree.600": "砍伐 600 棵树",
-  "chore.mine.stone.5": "开采 5 次石脉",
-  "chore.mine.stone.7": "开采 7 次石脉",
-  "chore.mine.stone.8": "开采 8 次石脉",
-  "chore.mine.stone.50": "开采 50 次石脉",
-  "chore.mine.stone.60": "开采 60 次石脉",
-  "chore.mine.stone.100": "开采 100 次石脉",
-  "chore.mine.stone.120": "开采 120 次石脉",
-  "chore.mine.stone.150": "开采 150 次石脉",
-  "chore.mine.stone.200": "开采 200 次石脉",
-  "chore.mine.stone.250": "开采 250 次石脉",
-  "chore.mine.stone.300": "开采 300 次石脉",
-  "chore.mine.gold.30": "开采 30 次金脉",
-  "chore.mine.gold.38": "开采 38 次金脉",
-  "chore.mine.gold.45": "开采 45 次金脉",
+  "chore.mine.stone.5": "开采 5 次<石脉>",
+  "chore.mine.stone.7": "开采 7 次<石脉>",
+  "chore.mine.stone.8": "开采 8 次<石脉>",
+  "chore.mine.stone.50": "开采 50 次<石脉>",
+  "chore.mine.stone.60": "开采 60 次<石脉>",
+  "chore.mine.stone.100": "开采 100 次<石脉>",
+  "chore.mine.stone.120": "开采 120 次<石脉>",
+  "chore.mine.stone.150": "开采 150 次<石脉>",
+  "chore.mine.stone.200": "开采 200 次<石脉>",
+  "chore.mine.stone.250": "开采 250 次<石脉>",
+  "chore.mine.stone.300": "开采 300 次<石脉>",
+  "chore.mine.gold.30": "开采 30 次<金脉>",
+  "chore.mine.gold.38": "开采 38 次<金脉>",
+  "chore.mine.gold.45": "开采 45 次<金脉>",
   "chore.mine.crimstone.20": "开采 20 次猩红宝石脉",
   "chore.mine.crimstone.22": "开采 22 次猩红宝石脉",
   "chore.mine.crimstone.24": "开采 24 次猩红宝石脉",
-  "chore.mine.iron.150": "开采 150 次铁脉",
-  "chore.mine.iron.175": "开采 175 次铁脉",
-  "chore.mine.iron.200": "开采 200 次铁脉",
-  "chore.mine.iron.225": "开采 225 次铁脉",
+  "chore.mine.iron.150": "开采 150 次<铁脉>",
+  "chore.mine.iron.175": "开采 175 次<铁脉>",
+  "chore.mine.iron.200": "开采 200 次<铁脉>",
+  "chore.mine.iron.225": "开采 225 次<铁脉>",
   "chore.mine.oil.15": "提取 15 次油田",
   "chore.mine.oil.18": "提取 18 次油田",
   "chore.mine.oil.21": "提取 21 次油田",
