[FEAT] Flower Box Rewards

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5951,5 +5951,8 @@
   "hotAirBalloon.flightTimes": "Flight times are limited",
   "hotAirBalloon.openNow": "Open Now",
   "hotAirBalloon.noFlights": "No scheduled flights available.",
-  "hotAirBalloon.letsGo": "Let's go"
+  "hotAirBalloon.letsGo": "Let's go",
+  "description.bronzeFlowerBox": "A bronze flower box",
+  "description.silverFlowerBox": "A silver flower box",
+  "description.goldFlowerBox": "A gold flower box"
 }
