--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3827,7 +3827,7 @@
   "market": "市场",
   "workbench": "工作台",
   "treasure.shop": "宝藏商店",
-  "digging": "正在挖宝",
+  "digging": "挖宝",
   "basic.seeds": "低阶种子",
   "medium.seeds": "中阶种子",
   "eggcellentCollection.description": "收集鸡蛋 10 次",
@@ -5772,18 +5772,18 @@
   "stream.beginsSoon": "距离市政厅直播还剩：",
   "stream.isLive": "市政厅正在直播",
   "description.bronzeLoveBox": "青铜爱心盒",
-  "description.silverLoveBox": "一个银色的爱心盒子",
-  "description.goldLoveBox": "一个金色的爱心盒子",
-  "rewardBox.tapToOpen": "点按即可打开",
+  "description.silverLoveBox": "白银爱心盒",
+  "description.goldLoveBox": "黄金爱心盒",
+  "rewardBox.tapToOpen": "单击打开",
   "floatingIsland.isLive": "神秘岛",
-  "hotAirBalloon.readyToFly": "准备好飞行了吗？",
-  "hotAirBalloon.description": "你听说过神秘的浮岛吗？如果你时机合适，你可以和我一起搭车。",
-  "hotAirBalloon.exchangeInfo": "用爱情护身符兑换鲜花和奖励。",
+  "hotAirBalloon.readyToFly": "准备好升空了吗？",
+  "hotAirBalloon.description": "你听说过神秘浮岛吗？要是你方便，我可以捎上你一程。",
+  "hotAirBalloon.exchangeInfo": "用爱心护符兑换 $Flower 和奖励。",
   "hotAirBalloon.puzzleInfo": "解开神秘难题以获得奖励",
-  "hotAirBalloon.flightTimes": "飞行时间有限",
+  "hotAirBalloon.flightTimes": "升空时间有限",
   "hotAirBalloon.openNow": "立即打开",
-  "hotAirBalloon.noFlights": "没有定期航班。",
+  "hotAirBalloon.noFlights": "没有预期航班。",
   "hotAirBalloon.letsGo": "我们走吧",
-  "description.barnBlueprint.boost1": "+5 基础谷仓动物",
-  "description.barnBlueprint.boost2": "每次升级 +5 最大谷仓动物"
+  "description.barnBlueprint.boost1": "+5 基础畜棚容纳牲畜",
+  "description.barnBlueprint.boost2": "畜棚每次升级 +5 最大容纳牲畜"
 }
