--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -212,7 +212,7 @@
   "description.lg.carrot.boost": "+0.2 胡萝卜",
   "description.lg.radish.boost": "+0.4 小萝卜",
   "description.rich.chicken.boost": "+0.1 鸡蛋",
-  "description.speed.chicken.boost": "-10% 产出时间",
+  "description.speed.chicken.boost": "-10% 鸡生产时间",
   "description.ayam.cemani.boost": "+0.2 鸡蛋",
   "description.rooster.boost": "变种鸡出现几率提升 2 倍",
   "description.undead.rooster.boost": "+0.1 鸡蛋",
