--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3663,7 +3663,7 @@
   "description.ayam.cemani": "Sunflower Land 最稀有的鸡！",
   "description.undead.rooster": "战争的不幸牺牲品。+0.1 鸡蛋产量。",
   "description.fat.chicken.boost": "-10% 鸡饲料",
-  "description.el.pollo.veloz.boost": "-2 小时鸡蛋生产时间",
+  "description.el.pollo.veloz.boost": "-2 小时鸡生产时间",
   "description.farm.dog.boost": "-25% 绵羊生产时间",
   "description.free.range": "+0.1 牲畜产出",
   "description.chicken.coop": "可以用来养鸡的鸡舍。使用这种稀有鸡舍来增加产蛋量。",
