--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5132,12 +5132,12 @@
   "restrictionReason.hasBonusAnimals.henHouse": "鸡舍",
   "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在《风云变幻》章节中，来自 “送货、家务和赏金” 的 +1 “时光裂片”。",
   "description.hammock": "在微风中轻轻摇摆，享受来之不易的休息。在《风云变幻》章节中，从 “送货、农活和赏金” 中获得 +1 “时光裂片”。",
-  "reputation.sprout.description": "每天 1 份商城清单",
-  "reputation.seedling.trades": "每天 2 个商城清单",
-  "reputation.grower.trades": "每天 3 个商城清单",
-  "reputation.marketplace.listingLeft": "剩余清单次数",
-  "reputation.marketplace.listingsLeft": "剩余清单",
-  "reputation.cropkeeper.trades": "无限量清单和优惠",
+  "reputation.sprout.description": "每天 1 单市集挂单",
+  "reputation.seedling.trades": "每天 2 单市集挂单",
+  "reputation.grower.trades": "每天 3 单市集挂单",
+  "reputation.marketplace.listingLeft": "剩余挂单次数",
+  "reputation.marketplace.listingsLeft": "剩余挂单",
+  "reputation.cropkeeper.trades": "无限量挂单和报价",
   "reputation.cropkeeper.offers": "提出并接受报价",
   "statements.water.well.needed.one": "建造水井以支持更多农作物",
   "statements.water.well.needed.two": "为了养活更多的农作物，请建造一口井。",
@@ -5164,7 +5164,7 @@
   "ronin.nft.description": "你的 {{nftName}} 自带专属福利！",
   "ronin.nft.perkTwo": "烹饪速度快 2 倍",
   "ronin.nft.expires": "这些福利不会永远持续下去，所以在它们持续的时候充分利用它们！",
-  "description.genie.lamp": "一盏神奇的灯，里面有一个精灵，他会给你三个愿望，并在第三个愿望之后烧掉灯泡。愿望清单：Genie Bear、Pirate Bounty、Pearl、Bumpkin Roast、Goblin Brunch 和 Sand Drill x10",
+  "description.genie.lamp": "一盏神灯，里面有一位精灵，他会满足您三个愿望，并在第三个愿望之后销毁神灯。愿望清单：Genie Bear、Pirate Bounty、Pearl、Bumpkin Roast、Goblin Brunch 和 Sand Drill x10",
   "description.genie.lamp.boost": "实现愿望清单中的 3 个愿望",
   "description.tunnel.mole": "使石矿的产量提高 0.25％",
   "description.rocky.the.mole": "使铁矿的产量提高了 0.25％",
@@ -5400,10 +5400,10 @@
   "chapters.guide.three": "惊喜活动和独特的奖励使每个章节充满活力和吸引力。",
   "reputation.guide.connectDiscord": "单击齿轮图标，选择常规设置，然后单击 Discord 按钮，连接您的 Discord 帐户。",
   "skillCategory.reachIsland": "到达 {{island}} 即可解锁",
-  "marketplace.boughtListing": "已购买的清单",
-  "marketplace.soldListing": "已售清单",
-  "marketplace.madeOffer": "已报价",
-  "marketplace.acceptedOffer": "接受的报价",
+  "marketplace.boughtListing": "购买挂单",
+  "marketplace.soldListing": "售出挂单",
+  "marketplace.madeOffer": "提出报价",
+  "marketplace.acceptedOffer": "接受报价",
   "chapters.guide.two": "章节票券可以在 Stella 的 Megastore 或拍卖会上消费，玩家可以在拍卖会上争夺独家物品。",
   "mayor.plaza.notEnoughGems": "你没有足够的钻石",
   "mayor.paperworkComplete": "恭喜 {{username}}，您的所有文件都已完成。期待再次与您相见！",
