--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2689,7 +2689,7 @@
   "npcDialogues.cornwell.badFlower": "这朵花不太对。也许还需要再找一回？",
   "npcDialogues.cornwell.goodFlower": "这朵桔梗花真令人愉快！谢谢你把它带给我。",
   "npcDialogues.tywin.reward": "感谢你的送货。以下就是对你努力的回谢。",
-  "npcDialogues.tywin.flowerIntro": "你听说过精美的报春帘花或迷人的天霜花吗？我需要一个。",
+  "npcDialogues.tywin.flowerIntro": "你听说过精美的报春帘花或迷人的天霜花吗？我需要一朵。",
   "npcDialogues.tywin.averageFlower": "不完全是我所希望的，但还算乐见。谢谢。",
   "npcDialogues.tywin.badFlower": "这朵花不太对。也许再换一个来更合适？",
   "npcDialogues.tywin.goodFlower": "这朵花简直令人叹为观止！谢谢你把它带给我。",
