--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5778,7 +5778,7 @@
   "floatingIsland.isLive": "神秘岛",
   "hotAirBalloon.readyToFly": "准备好升空了吗？",
   "hotAirBalloon.description": "你听说过神秘浮岛吗？要是你方便，我可以捎上你一程。",
-  "hotAirBalloon.exchangeInfo": "用爱心护符兑换 $Flower 和奖励。",
+  "hotAirBalloon.exchangeInfo": "用爱心护符兑换 $FLOWER 和奖励。",
   "hotAirBalloon.puzzleInfo": "解开神秘难题以获得奖励",
   "hotAirBalloon.flightTimes": "升空时间有限",
   "hotAirBalloon.openNow": "立即打开",
