--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5777,12 +5777,12 @@
   "rewardBox.tapToOpen": "单击打开",
   "floatingIsland.isLive": "神秘岛",
   "hotAirBalloon.readyToFly": "准备好升空了吗？",
-  "hotAirBalloon.description": "你听说过神秘浮岛吗？要是你方便，我可以捎上你一程。",
+  "hotAirBalloon.description": "你听说过神秘浮岛吗？只要时间掐准，我可以捎上你一程。",
   "hotAirBalloon.exchangeInfo": "用爱心护符兑换 $FLOWER 和奖励。",
   "hotAirBalloon.puzzleInfo": "解开神秘难题以获得奖励",
-  "hotAirBalloon.flightTimes": "升空时间有限",
+  "hotAirBalloon.flightTimes": "升空次数有限",
   "hotAirBalloon.openNow": "立即打开",
-  "hotAirBalloon.noFlights": "没有预期航班。",
+  "hotAirBalloon.noFlights": "没有航班计划。",
   "hotAirBalloon.letsGo": "我们走吧",
   "description.barnBlueprint.boost1": "+5 基础畜棚容纳牲畜",
   "description.barnBlueprint.boost2": "畜棚每次升级 +5 最大容纳牲畜"
