Add new floating shop (#5561)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5895,7 +5895,8 @@
   "loveRush.choreBonus": "Bonus 100 Love Charms for completing 21 Chores in a week!",
   "loveRush.deliveryStreakBonus": "Love Rush Bonus: {{loveCharmReward}} Love Charms",
   "loveRush.referral": "VIP Referrals will reward 200 Love Charms during Love Rush",
-  "rewardShop.msg1": "Welcome to my Reward Shop. Collect Love Charms & exchange them for rare items.",
+  "rewardShop.msg1": "Welcome to my Reward Shop. Collect Love Charms & exchange them for rare items. Each day brings new prices & different items!",
+  "rewardShop.msg2": "Shop will change every 24 hours",
   "rewardShop.wearable": "Nice buy! Your new wearable is safely stored in your wardrobe. You can equip it to a bumpkin from there.",
   "rewardShop.collectible": "Nice buy! Your new collectible is safely stored in your inventory.",
   "error.insufficientMatic": "POL required",
