Update codex message

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2587,7 +2587,7 @@
   "megaStore.wearable": "Nice buy! Your new wearable is safely stored in your wardrobe. You can equip it to a bumpkin from there.",
   "megaStore.collectible": "Nice buy! Your new collectible is safely stored in your inventory.",
   "megaStore.timeRemaining": "{{timeRemaining}} left!",
-  "megaBountyBoard.message": "Welcome to the Mega Bounty Board! Check out this week's bounties. If you have any of the requested items, you can exchange them for rewards!",
+  "megaBountyBoard.message": "Welcome to the Mega Bounty Board! Check out this week's bounties. If you have any of the requested items, you can head to poppy in the plaza to exchange them for rewards!",
   "milestone.noviceAngler": "Congratulations, you've just reached the Novice Angler milestone! You're well on your way to becoming a fishing pro by catching each basic fish.",
   "milestone.advancedAngler": "Impressive, you've just reached the Advanced Angler milestone! You've mastered the art of catching each advanced fish. Keep it up!",
   "milestone.expertAngler": "Wow, you've just reached the Expert Angler milestone! You're a true fishing expert now! Catching 300 fish is no small feat.",
