--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4046,6 +4046,10 @@
   "bounties.sell.sfl": "Are you sure you want to sell this for {{amount}} FLOWER?",
   "bounties.sell.animal.sick": "Hmm, I see this poor animal is sick. I'll still take them off your hands, but I will have to offer you a reduced bounty. Deal?",
   "bounties.animal.select": "Select a {{name}} to sell.",
+  "bounties.bonus.allCompleted": "All Bounties Completed!",
+  "bounties.bonus.headToPoppy": "Head to Poppy to claim your bonus!",
+  "bounties.bonus.clickToClaim": "Click here to claim your bonus {{seasonalTicket}}s",
+  "bounties.bonus.getBonus": "Get Bonus 50 {{seasonalTicket}}s for completing all bounties!",
   "bountyType.label": "{{type}} Bounties",
   "npcDialogues.chase.intro1": "Howdy Bumpkin! Animals are coming to Sunflower Land on November 1st.",
   "npcDialogues.chase.intro2": "However I'm in a bit of a pickle. My herd has mysteriously gone missing - it's like they disappeared out of thin air!",
