--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4048,7 +4048,7 @@
   "bounties.animal.select": "Select a {{name}} to sell.",
   "bounties.bonus.allCompleted": "All Bounties Completed!",
   "bounties.bonus.headToPoppy": "Head to Poppy to claim your bonus!",
-  "bounties.bonus.clickToClaim": "Click here to claim your bonus {{seasonalTicket}}s",
+  "bounties.bonus.clickToClaim": "Claim bonus",
   "bounties.bonus.getBonus": "Get Bonus 50 {{seasonalTicket}}s for completing all bounties!",
   "bountyType.label": "{{type}} Bounties",
   "npcDialogues.chase.intro1": "Howdy Bumpkin! Animals are coming to Sunflower Land on November 1st.",
