--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6012,5 +6012,5 @@
   "description.nurseSheep.boost": "Sheeps cannot get sick during summer",
   "description.pinkDolphin": "A rare dolphin with a beautiful pink hue",
   "description.pinkDolphin.boost": "Increase fish catch by 1 during spring",
-  "description.lunalist": "A mysterious creature devoted to the moon. A decorative mutant flower found during the Great Bloom chapter"
+  "description.lunalist": "A blooming artifact devoted to the moon. A decorative mutant flower found during the Great Bloom chapter"
 }
