[FEAT] Whats on Great Bloom

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5566,7 +5566,7 @@
   "whatsOn.february10th": "February 10th",
   "whatsOn.timeshardsEarning": "Complete chores, deliveries & bounties to earn Timeshards!",
   "whatsOn.timeshardsUsage": "Collect enough Timeshards to purchase NFTs at the Megastore and Auction House.",
-  "whatsOn.vipPass": "Grab your VIP Pass for bonus Timeshards and perks!",
+  "whatsOn.vipPass": "Grab your VIP Pass for bonus Geniseeds and perks!",
   "whatsOn.skillSystem": "New skill system launched!",
   "whatsOn.seasonCompetition": "Chapter Competition",
   "whatsOn.april14th": "14th April",
@@ -5617,9 +5617,9 @@
   "recipes.confirmCancel": "Are you sure you want to remove this {{recipe}} from the queue?",
   "recipes.vipCookingQueue": "Become a VIP member and unlock the ability to cook up to 4 recipes at once! Upgrade now to supercharge your cooking.",
   "recipes.confirmAddToQueue": "Are you sure you want to add {{recipe}} to the queue?",
-  "whatsOn.ticketsEnd": "No more timeshards",
+  "whatsOn.ticketsEnd": "No more Geniseeds",
   "whatsOn.april28th": "April 28th",
-  "whatsOn.ticketPaused": "The Bumpkins are on holidays - No more timeshards from chores & bounties.",
+  "whatsOn.ticketPaused": "The Bumpkins are on holidays - No more Geniseeds from chores & bounties.",
   "whatsOn.mysterySeasonText2": "No more timeshards from deliveries.",
   "whatsOn.mysterySeasonText3": "No more ancient clocks while digging.",
   "polygon.required": "Polygon Required",
@@ -5973,5 +5973,21 @@
   "description.bronzeToolBox": "A bronze tool box",
   "description.silverToolBox": "A silver tool box",
   "description.goldToolBox": "A gold tool box",
-  "description.testBox": "A test box"
+  "description.testBox": "A test box",
+  "whatsOn.greatBloom": "The Great Bloom",
+  "whatsOn.floatingIsland": "A Floating Island has appeared. Ride up in the Heart Air Balloon and exchange Love Charms for rewards!",
+  "whatsOn.flowerPuzzle": "Solve the daily community puzzle for a bonus reward",
+  "whatsOn.brokenPillars": "Ancient Broken Pillars have appeared in the desert. Can you find them?",
+  "whatsOn.megaBountyBoard": "Poppy has updated her Mega Bounty Board. Exchange fish, treasure + more for chapter tokens",
+  "whatsOn.may5th": "May 5th",
+  "whatsOn.genesisEarning": "Complete chores, deliveries & bounties to earn Geniseeds!",
+  "whatsOn.genesisUsage": "Collect enough Geniseeds to purchase NFTs at the Megastore and Auction House.",
+  "whatsOn.june23rd": "June 23rd",
+  "whatsOn.august1st": "August 1st",
+  "whatsOn.coopSeason": "Co-op Chapter",
+  "whatsOn.coopSeasonText": "The co-op chapter is here. A new way to help your friends and earn rewards!",
+  "whatsOn.coopSeasonText2": "Grow mega crops, clean neighboring farms and create powerful friendships.",
+  "news.greatBloom": "The Great Bloom",
+  "news.greatBloom.description": "The Great Bloom is here. A 3 month race to earn Geniseed tokens and exchange them for NFTs & FLOWER.",
+  "whatsOn.flowerBox": "Exchange Geniseeds for $FLOWER Boxes"
 }
