--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5070,6 +5070,20 @@
   "description.redTile": "A striking red tile, radiating warmth and energy in every step.",
   "description.yellowTile": "A bright yellow tile, capturing the warmth and cheerfulness of sunlight.",
 
+  "description.quarry": "An age-old stone site that never runs dry—perfect for those seeking a steady supply of free stone.",
+  "description.obsidianTurtle": "Steady and silent, this ancient creature gathers traces of volcanic stone wherever it roams.",
+  "description.winterGuardian": "Summoned from a land where snow never melts, this frostbound protector now watches over the skies—an honored guest in unfamiliar winds.",
+  "description.summerGuardian": "A blazing figure born under endless sun, this Guardian brings the heat of its homeland to the cooler heights of Sky Island.",
+  "description.springGuardian": "Awakened from fertile fields far below, this gentle spirit now nurtures life among the drifting gardens of the sky.",
+  "description.autumnGuardian": "With harvest hues and a wistful gaze, this Guardian carries the essence of changing seasons from distant lands into the realm above.",
+  "description.skyPillar": "These ancient columns are said to predate the sky itself, pulsing with the energy that keeps Sky Island afloat and in balance.",
+  "description.flowerscribedStatue": "Carved from pale stone and etched with ancient floral verses, this statue hums with the quiet wisdom of Sunflower Land.",
+  "description.balloonRug": "A soft, whimsical rug that feels lighter than air—perfect for lounging in style.",
+  "description.giantYam": "A root so massive it could feed a village—or at least make one impressive stew.",
+  "description.heartAirBalloon": "A floating symbol of love, ready to lift spirits and hearts alike.",
+  "description.giantZuchinni": "Impossibly large and suspiciously green, this veggie is a true garden marvel.",
+  "description.miniFloatingIsland": "A small-sized patch of paradise that somehow stays afloat—perfect for peaceful moments.",
+
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
