[FEAT] Dynamic Buff Labels for Chapter Ticket Boost Items

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4920,6 +4920,7 @@
   "description.toxic.tuft.boost": "+0.1 Merino Wool",
   "description.mootant.boost": "+0.1 Leather",
   "description.bonusTimeshard.boost": "+1 Timeshard",
+  "description.bonusGeniseed.boost": "+1 Geniseed",
   "description.ladybugSuit.boost": "-25% Onion Seed Coin cost",
   "description.crabHat.boost": "+1 treasure when fishing",
   "description.mammoth.boost": "-25% Cow Production Time",
