--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5998,6 +5998,7 @@
   "whatsOn.genesisEarning": "Complete chores, deliveries & bounties to earn Geniseeds!",
   "whatsOn.genesisUsage": "Collect enough Geniseeds to purchase NFTs at the Megastore and Auction House.",
   "whatsOn.june23rd": "June 23rd",
+  "whatsOn.july28th": "July 28th",
   "whatsOn.august1st": "August 1st",
   "whatsOn.coopSeason": "Co-op Chapter",
   "whatsOn.coopSeasonText": "The co-op chapter is here. A new way to help your friends and earn rewards!",
