--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5081,7 +5081,7 @@
   "description.flowerscribedStatue": "Carved from pale stone and etched with ancient floral verses, this statue hums with the quiet wisdom of Sunflower Land.",
   "description.balloonRug": "A soft, whimsical rug that feels lighter than air—perfect for lounging in style.",
   "description.giantYam": "A root so massive it could feed a village—or at least make one impressive stew.",
-  "description.heartAirBalloon": "A floating symbol of love, ready to lift spirits and hearts alike.",
+  "description.heartAirBalloon": "A floating symbol of love, ready to lift spirits and hearts alike. +1 Geniseeds from deliveries, chores & bounties.",
   "description.giantZuchinni": "Impossibly large and suspiciously green, this veggie is a true garden marvel.",
   "description.miniFloatingIsland": "A small-sized patch of paradise that somehow stays afloat—perfect for peaceful moments.",
 
