[CHORE] Delete Bert Obsession Code

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -137,7 +137,7 @@
   "birdieplaza.howToEarnTickets": "{{seasonalTicket}}s?",
   "birdieplaza.earnTicketsVariety": "You can earn {{seasonalTicket}} in a variety of ways.",
   "birdieplaza.commonMethod": "The most common method to earn {{seasonalTicket}}s is by gathering resources or collecting other requested items, and then delivering them to Bumpkins in the Plaza and some other areas.",
-  "birdieplaza.choresAndRewards": "You can also earn {{seasonalTicket}}s by weekly chores, daily chest rewards, Bert's Odd Obsession and bounty system!",
+  "birdieplaza.choresAndRewards": "You can also earn {{seasonalTicket}}s by weekly chores, daily chest rewards, and bounty system!",
   "birdieplaza.gatherAndCraft": "Gather enough {{seasonalTicket}}s and you will be able to buy some rare items like I did.",
   "birdieplaza.newSeasonIntro": "Every 3 months a new season is introduced at Sunflower Land.",
   "birdieplaza.seasonQuests": "This season has exciting quests, rare collectibles and exclusive wearables you can earn.",
@@ -1255,7 +1255,6 @@
   "error.recipeNotReady": "No recipes are ready",
   "error.npcsNotExist": "NPCs does not exist",
   "error.noDiscoveryAvailable": "No discovery available",
-  "error.obsessionAlreadyCompleted": "This obsession is already completed",
   "error.collectibleNotInInventory": "You do not have the collectible required",
   "error.wearableNotInWardrobe": "You do not have the wearable required",
   "error.requiredBuildingNotExist": "Required building does not exist",
@@ -1998,7 +1997,6 @@
   "no.delivery.avl": "No deliveries available",
   "no.limits.exceeded": "No limits exceeded",
   "no.mail": "Your mailbox is empty.",
-  "no.obsessions": "No Obsessions",
   "no.thanks": "No thanks",
   "ocean.fishing": "Ocean fishing",
   "off": "Off",
@@ -3139,12 +3137,6 @@
   "plaza.magicButton.query": "A magical button has appeared in the plaza. Do you want to press it?",
   "nyonStatue.memory": "In memory of",
   "nyonStatue.description": "The legendary knight responsible for clearing the goblins from the mines. Shortly after his victory he died by poisoning from a Goblin conspirator. The Sunflower Citizens erected this statue with his armor to commemorate his conquests.",
-  "obsessionDialogue.line1": "Ah, the {{itemName}}! I only wish to see it, not possess. Show it to me, and {{seasonalTicket}}s will be your reward.",
-  "obsessionDialogue.line2": "You've brought the {{itemName}}? I merely want to gaze upon it. Let me see, and {{seasonalTicket}}s shall be yours.",
-  "obsessionDialogue.line3": "Is that the {{itemName}} you have? A mere glance is all I desire. For this, you'll receive {{seasonalTicket}}s.",
-  "obsessionDialogue.line4": "The {{itemName}}! I don't want to keep it, just to behold it. Show it to me, and {{seasonalTicket}}s are yours.",
-  "obsessionDialogue.line5": "You offer a view of the {{itemName}}? All I ask is to see it briefly. For your generosity, {{seasonalTicket}}s will be granted to you.",
-  "obsessionDialogue.codex": "Is that the {{itemName}} you have? Travel to the plaza to find Bert and show it to him, and he will give you {{seasonalTicket}}s in return.",
   "offer.okxOffer": "Howdy Farmer, I have an exclusive OKX offer for you!",
   "offer.beginWithNFT": "To begin you will need to mint a free Farm NFT. This will include:",
   "offer.getStarterPack": "Get Starter Pack Now",
@@ -4009,7 +4001,6 @@
   "description.miffy": "A rare Morchi. Doubles XP during the FSL Competition(October 2024).",
   "description.mog": "A lazy Morchi.",
   "animal": "Animal",
-  "obsession": "Obsession",
   "feederMachine.title": "Feeder Machine",
   "mix.one": "Mix 1",
   "mix.ten": "Mix 10",
