[FEAT] Quarry Boost

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6015,7 +6015,7 @@
   "description.giantZuchinni.boost": "2x Zuchinni Speed",
   "description.giantYam.boost": "+0.5 Yams",
   "description.oracleSyringe.boost": "Heal animals for free",
-  "description.quarry.boost": "Mine stone for free",
+  "description.quarry.boost": "Mine stone without pickaxes",
   "description.obsidianTurtle.boost": "+0.5 Obsidian",
   "description.winterGuardian.boost": "Winter Disaster Protection",
   "description.winterGuardian.boost2": "Blessed Winter Events",
