--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3917,6 +3917,7 @@
   "transaction.blocked": "Hold up, you already have a transaction that has been initiated.",
   "transaction.cleared": "Transaction cleared",
   "transaction.cleared.message": "Your transaction was unable to go through. Please try again.",
+  "transaction.refresh.message": "Looks like your transaction expired. Please click refresh to try again.",
   "transaction.waiting": "{{name}} in progress",
   "transaction.somethingWentWrong": "Hmmm, something went wrong. Please try again.",
   "transaction.timedOut": "Timed out",
